--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">collcal</string>
+    <string name="home">홈</string>
+    <string name="college">학기</string>
+    <string name="user">마이페이지</string>
 </resources>
